Fix: completed Firebase config for full app functionality

--- a/index.html
+++ b/index.html
@@ -46,4 +46,20 @@
     const firebaseConfig = {
       apiKey: "AIzaSyBMDUTYCgbZ7x7c7YPaxjd6LCoDfKidLfY",
       authDomain: "ghost-letters.firebaseapp.com",
-      projectId: "g
+      projectId: "ghost-letters",
+      storageBucket: "ghost-letters.appspot.com",
+      messagingSenderId: "824847629052",
+      appId: "1:824847629052:web:866119645d2d1654ad3579",
+      measurementId: "G-49KVKE6XTG"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+  </script>
+
+  <!-- Your App Logic -->
+  <script src="script.js"></script>
+</body>
+</html>
+
